<resources>
    <string name="app_name">Word App</string>
    <string name="no_word">No words</string>
    <string name="search">Search</string>
    <string name="word_details">Word Details</string>
    <string name="add_word">Add New Word</string>
    <string name="edit_word">Editing Word</string>
    <string name="title">Title</string>
    <string name="meaning">Meaning</string>
    <string name="synonym">Synonym</string>
    <string name="details">Details</string>
    <string name="complete">Complete</string>
    <string name="edit">Edit</string>
    <string name="go_back">Back</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="date">Date</string>
    <string name="sort">Sort</string>
    <string name="sort_alert">Please select one of either Order and Type</string>
    <string name="sort_order">Sort order</string>
    <string name="sort_type">Sort type</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>