<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="32dp">

        <TextView
            android:id="@+id/tv_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_alert"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/rg_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sort_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sort_order"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@id/rg_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_alert" />

        <RadioGroup
            android:id="@+id/rg_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tv_sort_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sort_order">

            <RadioButton
                android:id="@+id/rb_ascending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ascending"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rb_descending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descending"
                android:textSize="18sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_sort_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_type"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/rg_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_order" />

        <RadioGroup
            android:id="@+id/rg_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/btn_sort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sort_type">

            <RadioButton
                android:id="@+id/rb_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/rb_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/app_6"
            android:text="@string/sort"
            android:textColor="@color/app_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_type" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
